# chesspoint72

./: .gitignore  .mcp.json  AGENTS.md  AI_PROCESS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
forward_pruning/: INTERFACE_CONTRACT.md  SEARCH_DIFF.md  SEARCH_DIFF.patch  _test_support.py  forward_pruning_config.py  pruning.py  python_chess_board.py  search_modified.py  test_pruning_toggles.py
forward_pruning/tests/: test_correctness.py
mcp_orchestrator/: dashboard.py  mcp_server.py  metrics.py
mcp_orchestrator/tournaments/: epd_suite.py  sprt_tester.py
mcp_orchestrator/validators/: perft_runner.py  uci_parser.py
scripts/: demo_advanced_hce.py
src/chesspoint72/: __init__.py  main.py  models.py
src/chesspoint72.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/chesspoint72/aiengines/: __init__.py
src/chesspoint72/app/: __init__.py  builtin_engine.py  controller.py
src/chesspoint72/assets/: README.md
src/chesspoint72/benchmark/: __init__.py  battle_royale.py  engine_match.py  tournament.py  tournament_runner.py
src/chesspoint72/engine/: __init__.py  __main__.py  board.py  evaluator.py  factory.py  heuristics.py  main.py  move_sorter.py  mvv_lva.py  negamax.py  nnue_evaluator.py  policies.py  search.py  transposition.py  types.py  uci_controller.py
src/chesspoint72/eval_pipeline/: __init__.py  ab_test.py  engine_config.py  game_runner.py  gm_engine.py  runner.py  stage0_perft.py  stage1_disqualify.py  stage3_baseline.py  stage4_benchmarks.py  stage5_ab_tests.py  stage6_factorial.py  stage7_regime.py  stage8_tournament.py  stage9_scoring.py
src/chesspoint72/forward_pruning/: SEARCH_DIFF.md  SEARCH_DIFF.patch  __init__.py  _test_support.py  forward_pruning_config.py  python_chess_board.py  search_modified.py  test_pruning_toggles.py
src/chesspoint72/hce/: __init__.py  advanced_features.py  hce.py  material.py  pst.py
src/chesspoint72/ui/: move_explainer.py  renderer.py  sprite_atlas.py
src/chesspoint72/web/: __init__.py  game_session.py  server.py
tests/: test_calix_agent_modes.py  test_calix_integration.py  test_calix_registry.py  test_controller.py  test_factory_hce_modules.py  test_frank_v3.py  test_main.py  test_minal.py  test_models.py  test_pruning_config.py  test_pruning_correctness.py  test_uci_client.py
(+175 files in other folders)
