[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chesspoint72"
version = "0.1.0"
description = "Pygame chess renderer with UCI engine support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pygame>=2.5.0",
  "python-chess>=1.999",
  "mcp>=1.0",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
chesspoint72 = "chesspoint72.main:main"
chesspoint72-engine = "chesspoint72.engine.factory:main"
chesspoint72-battle = "chesspoint72.benchmark.battle_royale:main"
chesspoint72-frank-v3 = "chesspoint72.aiengines.frank.v3.engine:main"
chesspoint72-minal-v1 = "chesspoint72.aiengines.minal.v1.engine:main"
chesspoint72-minal-v2 = "chesspoint72.aiengines.minal.v2.engine:main"
chesspoint72-minal-v3 = "chesspoint72.aiengines.minal.v3.engine:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
